--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./media/py-logo.png"/>
-    <title>Advanced Python Roadmap (Syllabus)</title>
+    <title>Advanced Python Syllabus</title>
 
     <!-- || Link stylesheet file -->
     <link rel="stylesheet" href="./style.css">
@@ -16,9 +16,9 @@
         <section class="outer--section">
             <section class="inner--section">
 
-                <h1 class="main--heading">Advanced Python Roadmap (Syllabus)</h1>
+                <h1 class="main--heading">Advanced Python Syllabus</h1>
                 <p class="discription--text">
-                    An advanced Python roadmap can be quite extensive, covering various topics and areas of expertise. Below is a
+                    An advanced Python syllabus can be quite extensive, covering various topics and areas of expertise. Below is a
                     comprehensive roadmap that covers both core Python concepts and advanced topics, enabling you to become a proficient
                     Python developer. It's essential to practice and build projects along the way to reinforce your understanding. Remember
                     that the order can be adjusted based on your existing knowledge and interests.
